force-app/main/default/objects/custom_create67__c/custom_create67__c.object-meta.xml
<CustomObject>
    <label>Custom created object67</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects67</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>