force-app/main/default/objects/custom_create67__c/fields/custom_create_67field513__c.field-meta.xml
<CustomField>
    <fullName>custom_create_67field513__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 67field513</label>
    <type>Checkbox</type>
</CustomField>